text aligncenter notabook fix

--- a/dpubsem2/notabook/assets/css/main.css
+++ b/dpubsem2/notabook/assets/css/main.css
@@ -229,6 +229,7 @@ p.noindent {
 	width:50%;
 	height:30vw;
 	text-transform:uppercase;
+	text-align:center;
 	margin-top:4vw;
 	margin-bottom:5vw;
 	border-top:.3vw solid #001133;
